# EverFree

./: .gitignore  CMakeLists.txt  README.md  build.sh  correcoes.patch
docs/: IMPROVEMENTS_VISUAL.md  MANUAL_TESTING_GUIDE.md  USABILITY_10_10_PLAN.md  USABILITY_CHECKLIST.md  USABILITY_EXECUTIVE_SUMMARY.md
qml/: main.qml
qml/components/: BigButton.qml  CodecBadge.qml  DesignTokens.qml  FileListItem.qml  FolderCard.qml  QualityStars.qml  SavingsBadge.qml  SavingsChart.qml  StatusBar.qml
qml/dialogs/: ConfirmDialog.qml  ErrorReportDialog.qml  OnboardingDialog.qml  SettingsDialog.qml  SubscriptionDialog.qml
qml/pages/: AdvancedWelcome.qml  HomeModePicker.qml  ProcessPage.qml  ReportPage.qml  RollbackPage.qml  ScanPage.qml  SelectPage.qml  SimpleWelcome.qml
resources/: resources.qrc
src/: AdvancedMode.cpp  AdvancedMode.hpp  AppController.cpp  AppController.hpp  SimpleMode.cpp  SimpleMode.hpp  main.cpp
src/cloud/: CloudProvider.hpp  LicenseManager.cpp  LicenseManager.hpp  LocalCloudProvider.cpp  LocalCloudProvider.hpp
src/db/: ProcessingDatabase.cpp  ProcessingDatabase.hpp
src/models/: FileItemModel.cpp  FileItemModel.hpp  ProgressModel.cpp  ProgressModel.hpp  ScanReportModel.cpp  ScanReportModel.hpp
src/utils/: FeatureFlags.hpp  FileUtils.cpp  FileUtils.hpp  TelemetryManager.cpp  TelemetryManager.hpp  ThemeManager.cpp  ThemeManager.hpp
src/workers/: ProcessWorker.cpp  ProcessWorker.hpp  ScanWorker.cpp  ScanWorker.hpp  VideoProcessWorker.cpp  VideoProcessWorker.hpp
tests/: CMakeLists.txt  README.md  color_audit.py  run_all_tests.sh  run_tests.py  test_appcontroller.cpp  test_fileutils.cpp  test_scanworker.cpp  ux_audit.py  visual_consistency_audit.py
